# Rich-Text-Editor

./: CMakeLists.txt  main.cpp
Core/: class.h  function.cpp  function.h  fundamental.cpp  fundamental.h  id.cpp  id.h  variable.cpp  variable.h
Resources/: resources.qrc
Tools/ColorPicker/: colorpicker.cpp  colorpicker.h
Tools/TextEditor/: editor.cpp  editor.h  editor.ui
Tools/TextEditor/Logic/: lexer.cpp  lexer.h  shuntingyard.cpp  shuntingyard.h  textexpression.cpp  textexpression.h  token.cpp  token.h
